# ec8_designPatterns

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/: expenses.h
src/: main.cpp
tests/: test_expenses.cpp
